--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/kevin-react-portfolio/Tech-PNG-Image-File.png" />
+
+  <link rel="icon" type="image/jpeg" href="profile.jpg" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kevin Sebastian - Portfolio</title>
 
